# ha-remidt-renovasjon

./: .gitignore  CLAUDE.md  README.md  const.py  hacs.json  pyproject.toml  strings.json
custom_components/remidt_renovasjon/: __init__.py  api.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/remidt_renovasjon/tests/: conftest.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py
custom_components/remidt_renovasjon/translations/: en.json  nb.json
custom_components/renovasjon/: config_flow.py  manifest.json
custom_components/renovasjon/tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py
tests/: __init__.py  test_init.py
