[project]
name = "renovasjon"
version = "1.0.0"
description = "Home Assistant integration for Renovasjonsportal - Norwegian waste collection schedules"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiohttp>=3.9",
    "homeassistant>=2024.1",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["custom_components/renovasjon/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
